2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add PROTOTYPE_USER.
	
	* admin-tool/profilesdialog.py: use it here.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add SKEL_HOMEDIR.
	
	* lib/usermod.py:
	(create_temporary_homedir): copy the contents of
	/etc/skel when creating the homedir.
	
	* lib/protosession.py:
	(__start_session): fix uid/gid mixup
	(__setup_shell_and_homedir):
	use usermod.create_temporary_homedir()

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/protosession.py: create a temporary homedir
	before starting the session and delete it after.
	
	* lib/usermod.py:
	(set_shell), (set_homedir): split these out
	into their own module. We'll prolly need to
	implement them differently for other distros.

	* lib/Makefile.am: add usermod.py.
	
	* lib/util.py: add usermod debugging.
	
	* lib/config.py.in: re-name/re-organize a few things.
	
	* lib/dirmonitor.py: add IO_PRI to the io_watch and
	fill in the other arguments in the callback.

2005-02-15  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/paneldelegate.py: fix typo.

2005-02-15  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: subst the expanded value of
	$(sbindir) and output sabayon.console. Hack copied
	from gdm. 

	* admin-tool/Makefile.am: don't build sabayon.console here.
	
	* admin-tool/sabayon.console.in: use $(EXPANDED_SABAYON_DIR)
	
	* lib/sources/Makefile.am: install in the right directory.
	
	* sabayon.spec.in: update to include icon, .desktop file,
	usermode stuff, localizations etc.

2005-02-15  Mark McLoughlin  <markmc@redhat.com>

	* Makefile.am,
	  admin-tool/Makefile.am: distcheck fixes.

2005-02-15  Mark McLoughlin  <markmc@redhat.com>

	Applying seems to actually work now ...

	* admin-tool/sabayon-apply.in,
	  admin-tool/sabayon-apply.py: add tool which applies
	a profile.
	
	* admin-tool/Makefile.am: add sabayon-apply.
	
	* lib/config.py.in: s/SESSION_TOOL_PATH/SESSION_TOOL_ARGV/
	and add APPLY_TOOL_ARGV.
	