@@ -1,5 +1,10 @@
 2005-02-16  Mark McLoughlin  <markmc@redhat.com>
 
+	* admin-tool/profilesdialog.py: hook up "Base on" by
+	just copying the profile we're basing the new one on.
+
+2005-02-16  Mark McLoughlin  <markmc@redhat.com>
+
 	* lib/config.py.in: add PROTOTYPE_USER.
 	
 	* admin-tool/profilesdialog.py: use it here.
